# minijam-132-severed

./: Cargo.toml
aseprite/: magic-stage.aseprite
assets/sprites/: assistant-sheet.aseprite.json
src/: camera.rs  camera_fader.rs  dialogues.rs  main.rs  sprites.rs  stage.rs
