[package]
name = "mj-132-severed"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_framepace = "0.12.1"
bevy_common_assets = { version = "0.6.0", features = ["json"] }
serde = "1.0.163"
serde_json = "1.0.96"